Refactor api import function